<resources>
    <string name="app_name">SpaceX</string>
    <string name="filter">Filter</string>
    <string name="company">Company</string>
    <string name="header_text">Launches</string>
    <string name="mission">Mission: %1$s</string>
    <string name="date_time">Date/time: %1$s at %2$s</string>
    <string name="rocket">Rocket: %1$s/%2$s</string>
    <string name="since">%1$s now: %2$s</string>
    <string name="info">Info</string>
    <string name="days">Days: %1$s %2$s now</string>
    <string name="company_info">"%1$s  was founded by %2$s in %3$s. It has now %4$s employees, %5$s launch sites, and is valued at USD %6$s"</string>
    <string name="year">Year</string>
    <string name="order">Order</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="result">Result</string>
    <string name="years">Years</string>
    <string name="youtube">youtube</string>
    <string name="wikipedia">wikipedia</string>
    <string name="showall">Show all</string>
</resources>