<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/drop_down_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/years"
        app:layout_constraintStart_toStartOf="parent"
        >
        <AutoCompleteTextView
            android:id="@+id/drop_down_ac"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintTop_toBottomOf="@id/drop_down_til"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>
    <RadioGroup
        android:id="@+id/result_radiogrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result_text"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        >
        <RadioButton
            android:id="@+id/successful_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successful"
            />
        <RadioButton
            android:id="@+id/failed_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failed"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/order_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_radiogrp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>
    <RadioGroup
        android:id="@+id/order_radiogrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_text"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        >
        <RadioButton
            android:id="@+id/asc_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asc"
            />
        <RadioButton
            android:id="@+id/desc_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_radiogrp"
        android:background="@color/purple_200"
        android:text="@string/filter"/>

</androidx.constraintlayout.widget.ConstraintLayout>