<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    >

    <ImageView
        android:id="@+id/mission_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/mission_result"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_clear_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mission_name"
        android:text="@string/mission"
        style="@style/TextViewStyle"
        app:layout_constraintStart_toEndOf="@id/mission_image"
        app:layout_constraintEnd_toStartOf="@id/mission_result"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mission_date_time"
        android:text="@string/date_time"
        style="@style/TextViewStyle"
        app:layout_constraintStart_toEndOf="@id/mission_image"
        app:layout_constraintTop_toBottomOf="@id/mission_name"
        app:layout_constraintEnd_toStartOf="@id/mission_result"
        app:layout_constraintHorizontal_bias="0"
        />

    <TextView
        android:id="@+id/mission_rocket"
        android:text="@string/rocket"
        style="@style/TextViewStyle"
        app:layout_constraintStart_toEndOf="@id/mission_image"
        app:layout_constraintTop_toBottomOf="@id/mission_date_time"
        app:layout_constraintEnd_toStartOf="@id/mission_result"
        app:layout_constraintHorizontal_bias="0"
        />
    <TextView
        android:id="@+id/mission_days"
        android:text="@string/days"
        style="@style/TextViewStyle"
        app:layout_constraintStart_toEndOf="@id/mission_image"
        app:layout_constraintTop_toBottomOf="@id/mission_rocket"
        app:layout_constraintEnd_toStartOf="@id/mission_result"
        app:layout_constraintHorizontal_bias="0"
        />
</androidx.constraintlayout.widget.ConstraintLayout>